2009-02-14  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* src/seahorse-viewer.c: (on_copy_complete):
	Add translator comments.

2009-02-14  Stef Walter  <stef@memberwebs.com>

	* pgp/seahorse-pgp-generate.glade: Collapse key generate 
	'Advanced Options' by default.

2009-02-14  Stef Walter  <stef@memberwebs.com>

	* configure.in: Bump version number.

=== seahorse 2.25.91 ===

2009-02-14  Stef Walter  <stef@memberwebs.com>

	* NEWS:
	* README: Release version 2.25.91

2009-02-13  Stef Walter  <stef@memberwebs.com>

	* gkr/seahorse-gkr-add-keyring.c: Fix problem with creation
	and destruction of the keyring create dialog. Fixes bug #548319
	
	* gkr/seahorse-gkr-add-keyring.c: Refresh keyrings after adding
	a keyring.
	
	* gkr/seahorse-gkr-keyring-commands.c: Prompt before deleting a keyring.
	
2009-02-13  Stef Walter  <stef@memberwebs.com>

	* reference/libcryptui/Makefile.am: Fix path-as-variable which
	prevents seahorse from building.
	
2009-02-12  Adam Schreiber  <sadam@clemson.edu>

    * gkr/seahorse-gkr-item-properties.glade.h:
    * src/seahorse-viewer.c: Add contexts for "delete" string.  
    Fixes bug #571359

    * help/C/figures/passphrase.png: (deleted)
    * help/C/figures/file-manager.png: (deleted)
    * help/C/figures/key-manager.png: (deleted)
    * help/C/figures/key-properties.png: (deleted)
    * help/C/figures/preferences.png: (deleted)
    * help/C/figures/signature.png: (deleted)
    * help/C/figures/generate.png: (deleted)
    * help/C/figures/recipients.png: (deleted)
    * help/C/figures/text-editor.png: (deleted)
    * help/C/figures/export.png: (deleted)
    * help/C/figures/import.png: (deleted)
    * help/Makefile.am: Remove unused screenshots

2009-02-10  Stef Walter  <stef@memberwebs.com>

	* configure.in:
	* pkcs11/seahorse-pkcs11-certificate-props.c:
	* pkcs11/seahorse-pkcs11-certificate.c: Allow PKCS#11 support to build,
	and fix build for changes in gnome-keyring.
	
2009-02-08  Stef Walter  <stef@memberwebs.com>
