@@ -1,5 +1,14 @@
 2009-02-14  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
+	reviewed by: Stef Walter <stef@memberwebs.com>
+
+	* pkcs11/seahorse-pkcs11-commands.c:
+	(seahorse_pkcs11_commands_delete_objects):
+
+	Use ngettext() where appropriate. Fixes bug #571778.
+
+2009-02-14  Wouter Bolsterlee  <wbolster@svn.gnome.org>
+
 	* src/seahorse-viewer.c: (on_copy_complete):
 	Add translator comments.
 
